--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "axios": "^0.21.0",
+    "chart.js": "^2.9.4",
+    "jquery": "^3.5.1",
+    "jsdom": "^16.4.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -27,7 +31,10 @@
     "@angular-devkit/build-angular": "~0.1100.3",
     "@angular/cli": "~11.0.3",
     "@angular/compiler-cli": "~11.0.3",
+    "@types/chart.js": "^2.9.28",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.4",
+    "@types/jsdom": "^16.2.5",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
