specify project id

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -32,4 +32,4 @@ jobs:
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
-          firebase deploy --token $FIREBASE_TOKEN
+          firebase deploy --token $FIREBASE_TOKEN --project ${{ secrets.FIREBASE_PROJECT_ID }}
