--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: 12.x
       - run: yarn install
       - name: set up config
-        run: npx ts-node -O '{\"module\": \"commonjs\"}' ./config.index.ts
+        run: 'npx ts-node -O ''{"module": "commonjs"}'' ./config.index.ts'
       - run: yarn build
         env:
           FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
